# attractor-experiment

./: .gitignore  AGENTS.md  README.md  pyproject.toml
attractor_experiment/: __init__.py  archaic_miscellany_prompts.py  archaic_prompts.py  basin_metrics.py  centroids.py  config.py  conspiracy_prompts.py  doom_prompts.py  lb_prompts.py  lb_prompts_jp.py  plain_mundane_prompts.py  plain_mystical_prompts.py  pre_1930_prompts.py  pre_1930_prompts_normalized.py  saklas_profiles.py  saturated_mundane_prompts.py  sycophancy_prompts.py  trajectory.py  two_qwen.py
attractor_study/: __init__.py  archaic_miscellany_prompts.py  archaic_prompts.py  basin_metrics.py  centroids.py  config.py  lb_prompts.py  lb_prompts_jp.py  plain_mundane_prompts.py  plain_mystical_prompts.py  pre_1930_prompts.py  saklas_profiles.py  saturated_mundane_prompts.py  sycophancy_prompts.py  trajectory.py  two_qwen.py
blog/: 2026-05-11-god-in-latent-space.md
data/local/basin_stats/: gemma_base_factorial_within.json  gemma_basis_comparison.json  gemma_factorial.json  gemma_lda_separation.json  gemma_lda_separation_continuation.json  gemma_null_and_ci_A.json  gemma_null_and_ci_A_continuation.json  gemma_steering_continuation.json  gemma_velocity_pull_A.json  gemma_velocity_pull_HN-S_A.json  gemma_velocity_pull_HN-S_A_continuation.json  gemma_velocity_pull_HP-S_A.json  gemma_velocity_pull_HP-S_A_continuation.json  gemma_velocity_pull_LP_A.json  gemma_velocity_pull_LP_A_continuation.json  gemma_velocity_pull_MR_A_continuation.json  gemma_velocity_pull_NB_A.json  gemma_velocity_pull_NB_A_continuation.json  ministral_basis_comparison.json  qwen_lda_separation.json  (+13 more)
docs/: findings.md  pitfalls.md
scripts/: 00_emit_attractor.py  01_emit_steered.py  02_two_qwen_loop.py  03_scripture_chunk.py  10_factorial_basin_score.py  11_factorial_within_cell.py  12_basin_null_tests.py  13_velocity_toward_centroid.py  14_mr_axis_score.py  15_centroid_closest_cell.py  16_mr_score.py  17_mr_direction_basis_check.py  18_steered_emit_analysis.py  19_basin_pc_resolution.py  30_register_continuation_probes.py  31_steering_analysis.py  40_lda_viz.py  41_h_last_pca.py  42_talkie_traj_pca.py  43_talkie_archaic_pca.py
(+89 files in other folders)
