[project]
name = "attractor-experiment"
version = "0.1.0"
description = "Does a meta-register attractor basin exist in LLM residual streams? Spun off from llmoji-experiment (2026-05-15)."
requires-python = ">=3.12"
license = "CC-BY-SA-4.0"
license-files = ["LICENSE"]
authors = [{ name = "a9lim", email = "mx@a9l.im" }]
# Workspace-shared model metadata, capture, sidecar IO, and taxonomy live in
# the root `transformer-experiments` package. Install the root editable first.
dependencies = [
    "transformer-experiments>=0.1,<0.2",
    "llmoji>=2.0,<3",
    "saklas>=1.4.6",
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "pandas",
    "pyarrow",
    "plotly",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Research repo, not published. The wheel config exists only so
# `pip install -e .` works and `from attractor_experiment import …`
# resolves. The real entry points are the scripts in `scripts/`.
packages = ["attractor_experiment"]
